<resources>
    <string name="app_name">Baby Sitter</string>
    <string name="action_settings">Ayarlar</string>
    <string name="select_lang">Lütfen Dil Seçiniz!</string>
    <string name="welcome">Hoşgeldiniz!</string>
    <string name="email">E-Posta Adresi</string>
    <string name="password">Şifre</string>
    <string name="password_conf">Şifreyi Onayla</string>
    <string name="user">Kullanıcı Adı</string>
    <string name="name">isim</string>
    <string name="surname">Soyisim</string>
    <string name="login">Giriş</string>
    <string name="save">Kayıt</string>
    <string name="turkish">Türkçe</string>
    <string name="english">İngilizce</string>
    <string name="create">Hesap Oluştur</string>
    <string name="cancel">İptal</string>
    <string name="delete">Sil</string>
    <string name="gender">Cinsiyet : </string>
    <string name="txtTitleBabyCreate">Yeni Bebek</string>
    <string name="txtTitleBabyEdit">Bebek Güncelle</string>
    <string name="ok">Tamam</string>
    <string name="theme">Tema</string>
    <string name="settings">Ayarlar</string>
    <string name="help">Yardım</string>
    <string name="blue">Mavi</string>
    <string name="green">Yeşil</string>
    <string name="yellow">Sarı</string>
    <string name="black">Siyah</string>
    <string name="white">Beyaz</string>
    <string name="gray">Gri</string>
    <string name="orange">Turuncu</string>
    <string name="pink">Pembe</string>
    <string name="purple">Mor</string>
    <string name="reminder">Hatırlatıcılar</string>
    <string name="photos">Fotoğraflar</string>
    <string name="calendar">Takvim</string>
    <string name="signup">Hesabınız Yok mu?  Kayıt ol</string>
    <string name="button_label">TAMAM</string>
    <string name="pref_name">Renk Seç</string>
    <string name="Remember_Me">Beni Hatırla</string>
    <string name="pref_summary">DialogPreference with Color Picker.</string>
    <string name="selecttheme">TEMA SEÇ</string>
    <string name="Button_Date">TARİH BUTONU</string>
    <string name="Button_Time">SAAT BUTONU</string>
    <string name="hint_user_name">Kullanıcı Adı</string>
    <string name="hint_name">İsim</string>
    <string name="hint_surname">Soyisim</string>
    <string name="hint_email">E-Posta</string>
    <string name="hint_password">Şifre</string>
    <string name="hint_confirm_password">Şifre Onayla</string>
    <string name="valid_User_name">Kullacını Adı Boş Bırakılamaz!!!</string>
    <string name="valid_Name">İsim Alanı Boş Bırakılamaz!!!</string>
    <string name="valid_Surname">Soyisim Alanı Boş Bırakılamaz!!!</string>
    <string name="valid_Email">E-Posta Adresi Boş Bırakılamaz!!!</string>
    <string name="valid_Password">Şifre Alanı Boş Bırakılamaz!!!</string>
    <string name="valid_Confirm_Password">Şifre Onay Alanı Boş Bırakılamaz!!!</string>
    <string name="valid_Gender">Cinsiyet Bilgisi Boş Bırakılamaz!!!</string>
    <string name="wrong_User_Name">Yanlış Kullanıcı Adı/E-Posta Adresi!!!</string>
    <string name="wrong_Password">Yanlış Şifre!!!</string>
    <string name="wrong_Email_Format">Geçersiz E-Posta Biçimi!!!</string>
    <string name="login_succesfully">Giriş Yapıldı</string>
    <string name="create_succesfully">Hesap Oluşturuldu</string>
    <string name="not_Match_Password">Şifreler Eşleşmiyor!!!</string>
    <string name="exist_User_Name">isimli kullanıcı mevcuttur!!!</string>
    <string name="exist_Email">adresi mevcuttur!!!</string>
    <string name="sorry">Üzgünüm, Yeniden Deneyin!!!</string>
    <string name="have_a_baby">isimli bebek bu kullanıcı için MEVCUT!!!</string>
    <string name="update_account">Kayıt Güncellendi</string>
    <string name="delete_account">Kayıt Silindi</string>
    <string name="message">Mesaj</string>
    <string name="play_ringtone">Zilsesi</string>
    <string name="once">Bir Kere</string>
    <string name="repeat">Tekrarla</string>
    <string name="from_date">Başlangıç:    </string>
    <string name="to_date">Bitiş:    </string>
    <string name="at_time">Saat:    </string>
    <string name="rule">Zamanla</string>
    <string name="interval">Gecikme</string>
    <string name="of">of</string>
    <string name="mins">dakika(s)    </string>
    <string name="hours">saat(s)    </string>
    <string name="days">gün(s)    </string>
    <string name="mounths">ay(s)    </string>
    <string name="years">yıl(s)    </string>
    <string name="no_data">Kayıt Yok</string>
    <string name="display_time">Saati Göster</string>
    <string name="display_settings">Ayarları Göster</string>
    <string name="date_range">Tarih Aralığı</string>
    <string name="date_format">Tarih Biçimi</string>
    <string name="time_format">Zaman Biçimi</string>
    <string name="vibrate">Titreşim</string>
    <string name="vibrate_on">Bildirimle Titret</string>
    <string name="set_ringtone">Zil Sesi Ayarla</string>
    <string name="notification_Setting">Bildirim Ayarları</string>
    <string name="use_hour">24 saatlik biçim kullan</string>
    <string name="daily">Günlük</string>
    <string name="actual">Güncel</string>
    <string name="cancel_capture">Resim Çekme İşlemi İptal Edildi</string>
    <string name="cancel_select">Resim Seçme İşlemi İptal Edildi</string>
    <string name="add_baby">Yeni Bebek Ekle</string>
    <string name="edit_baby">Seçili Bebeğin Bilgilerini Düzenle</string>
    <string name="ImageViewChoseFromGallery">Galeriden Seç</string>
    <string name="ImageViewTakePicture">Fotoğraf Çek</string>
    <string name="ImageCancel">İptal</string>
    <string name="click_add">Tıkla ve Kayıt Ekle...</string>
    <string-array name="Favorites">
    <item>Ruh Hali</item>
    <item>Beslenme</item>
    <item>Biberon</item>
    <item>Emzirme</item>
    <item>Uyku</item>
    <item>Bez Değişim</item>
    <item>Süt Sağma</item>
</string-array>
    <string-array name="MoreEvents">
        <item>Sağlık</item>
        <item>İlaç</item>
        <item>Aşı</item>
        <item>Temizlik</item>
        <item>Diş</item>
    </string-array>
    <string-array name="menu">
        <item >AnaSayfa</item>
        <item >Geçmiş</item>
        <item >İstatistik</item>
        <item >Günlük</item>
        <item >Gelişim</item>
    </string-array>
    <string name="mood">Ruh Hali</string>
    <string name="solid">Beslenme</string>
    <string name="bottle">Biberon</string>
    <string name="breast">Emzirme</string>
    <string name="sleep">Uyku</string>
    <string name="diaper">Bez Değişim</string>
    <string name="pumping">Süt Sağma</string>
    <string name="medicine">İlaç</string>
    <string name="health">Sağlık</string>
    <string name="vaccination">Aşı</string>
    <string name="hygiene">Temizlik</string>
    <string name="teeth">Diş</string>
    <string name="drawer_open">Hızlı Menüyü Aç</string>
    <string name="drawer_close">Hızlı Menüyü Kapat</string>
    <string name="title_activity_item_one">Kayıt</string>
    <string name="title_section1">Özellikler</string>
    <string name="title_section2">Favoriler</string>
    <string name="title_section3">Ekstra Olay</string>
    <string name="edit">Düzenle</string>
    <string name="delete_repeating">Tekrarlamayı Sil</string>
    <string name="delete_all">Hepsini Sil</string>
    <string name="title_activity_activity_mood">Ruh Hali</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_solid">Beslenme</string>
    <string name="title_activity_activity_bottle">Biberon</string>
    <string name="title_activity_activity_breast">Emzirme</string>
    <string name="title_activity_activity_sleep">Uyku</string>
    <string name="title_activity_activity_diaper">Bez Değişim</string>
    <string name="title_activity_activity_pumping">Süt Sağma</string>
    <string name="title_activity_activity_health">Sağlık</string>
    <string name="title_activity_activity_medicine">İlaç</string>
    <string name="title_activity_activity_vaccination">Aşı</string>
    <string name="title_activity_activity_hygiene">Temizlik</string>
    <string name="title_activity_activity_teeth">Diş</string>
    <string name="title_activity_activity_other">Diğer</string>
    <string name="sleep_activity_finish_button">Bitir</string>
    <string name="sleep_activity_total_button">Toplam = </string>
    <string name="sleep_activity_paused_button">Duraklatılmış = </string>
    <string name="sleep_activity_date_button">Tarih</string>
    <string name="sleep_activity_time_button">Zaman</string>
    <string name="sleep_activity_writesomething_button">Bir şeyler Yaz</string>
    <string name="Diaper_activity_date_button">Tarih</string>
    <string name="Diaper_activity_time_button">Zaman</string>
    <string name="Diaper_activity_cancel_button">İptal</string>
    <string name="Diaper_activity_save_button">Kaydet</string>
    <string name="Moods_activity_date_button">Tarih</string>
    <string name="Moods_activity_time_button">Zaman</string>
    <string name="Moods_activity_cancel_button">İptal</string>
    <string name="Moods_activity_save_button">Kaydet</string>
    <string name="Other_activity_cancel_button">İptal</string>
    <string name="Other_activity_save_button">Kaydet</string>
    <string name="Other_activity_total_button">Toplam</string>
    <string name="Other_activity_paused_button">Duraklatılmış</string>
    <string name="Other_activity_date_button">Tarih</string>
    <string name="Other_activity_time_button">Zaman</string>
    <string name="Other_activity_writesomething_button">Bir şeyler yaz</string>
    <string name="Other_activity_play_button">Oynat</string>
    <string name="Solid_activity_date_button">Tarih</string>
    <string name="Solid_activity_time_button">Zaman</string>
    <string name="Solid_activity_cancel_button">İptal</string>
    <string name="Solid_activity_save_button">Kaydet</string>
    <string name="Solid_activity_checkbox_cereal">Tahıl</string>
    <string name="Solid_activity_checkbox_meat">Et</string>
    <string name="Solid_activity_checkbox_pasta">Makarna</string>
    <string name="Solid_activity_checkbox_fish">Balık</string>
    <string name="Solid_activity_checkbox_bread">Ekmek</string>
    <string name="Solid_activity_checkbox_fruit">Meyve</string>
    <string name="Solid_activity_checkbox_vegetable">Sebze</string>
    <string name="Solid_activity_checkbox_dairy">Süt Ürünleri</string>
    <string name="Solid_activity_checkbox_eggs">Yumurta</string>
    <string name="Solid_activity_checkbox_other">Diğer</string>
    <string name="Bottle_activity_date_button">Tarih</string>
    <string name="Bottle_activity_time_button">Zaman</string>
    <string name="Bottle_activity_formula_button">Formül</string>
    <string name="Bottle_activity_amaount_button">0,00 ml</string>
    <string name="Bottle_activity_meas_button">Ölçü</string>
    <string name="Bottle_activity_writesth_button">Bir şeyler yaz</string>
    <string name="Bottle_activity_cancel_button">İptal</string>
    <string name="Bottle_Dialog_checkbox_formula">Formül</string>
    <string name="Bottle_Dialog_checkbox_milk">Süt</string>
    <string name="Bottle_Dialog_checkbox_water">Su</string>
    <string name="Bottle_Dialog_checkbox_juice">Meyve Suyu</string>
    <string name="Bottle_Dialog_checkbox_breastmilk">Anne Sütü</string>
    <string name="Bottle_Dialog_checkbox_other">Diğer</string>
    <string name="Sleep_activity_date_button">Tarih</string>
    <string name="Sleep_activity_time_button">Zaman</string>
    <string name="Sleep_activity_cancel_button">İptal</string>
    <string name="Sleep_activity_save_button">Kaydet</string>
    <string name="title">Başlık: </string>
    <string name="start">Başlat</string>
    <string name="stop">Dur</string>
    <string name="finish">Bitir</string>
    <string name="play">Oynat</string>
    <string name="save_button">Kaydet</string>
    <string name="voice_record">Ses Kaydı</string>
    <string name="date">Tarih</string>
    <string name="speech">Konuş-Yaz</string>
</resources>