<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.murat.benimbebegim.ActivityOther">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnOtherActivity_Cancel"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_button_rounded"
            android:text="00.00.00"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:textSize="38dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:weightSum="100">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/Other_activity_total_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/Other_activity_paused_button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnOtherActivity_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/Other_activity_date_button" />

                <Button
                    android:id="@+id/btnOtherActivity_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/Other_activity_time_button" />

            </LinearLayout>

            <Button
                android:id="@+id/btnOtherActivity_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Other_activity_play_button" />

            <Button
                android:id="@+id/btnOtherActivity_writesomething"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Other_activity_writesomething_button" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnOtherActivity_Finish"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/Other_activity_finish_button"
        android:textColor="@color/white" />

</RelativeLayout>

