<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_2">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/border_2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voice_record"
            android:drawableLeft="@android:drawable/ic_btn_speak_now"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:id="@+id/txtVoice_Add_Diary"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">
            <Button
                android:id="@+id/btnStart_Add_Diary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:textSize="12dp"
                android:drawableLeft="@android:drawable/ic_media_play"
                android:text="@string/start"/>
            <Button
                android:id="@+id/btnFinish_Add_Diary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="2dp"
                android:textSize="12dp"
                android:drawableLeft="@android:drawable/picture_frame"
                android:text="@string/finish"/>
            <Button
                android:id="@+id/btnPlay_Add_Diary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="2dp"
                android:textSize="12dp"
                android:drawableLeft="@android:drawable/ic_media_play"
                android:text="@string/play"/>
            <Button
                android:id="@+id/btnStop_Add_Diary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="2dp"
                android:textSize="12dp"
                android:drawableLeft="@android:drawable/picture_frame"
                android:text="@string/stop"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:paddingLeft="10dp"
                android:textSize="18dp"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/edtTitle_Add_Diary" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/border_2"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp">
            <EditText
                android:id="@+id/edtMessage_Add_Diary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="18"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:weightSum="100">
            <Button
                android:id="@+id/btnDate_Add_Diary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="50"
                android:background="@drawable/bg_button_rounded"
                android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                android:text="@string/date"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/btnSpeech2Text_Add_Diary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="50"
                android:background="@drawable/bg_button_rounded"
                android:drawableLeft="@android:drawable/ic_btn_speak_now"
                android:text="@string/speech"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:weightSum="100"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            >
            <Button
                android:id="@+id/btnCancel_Add_Diary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="50"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_button_rounded"
                android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnSave_Add_Diary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="50"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_button_rounded"
                android:drawableLeft="@android:drawable/ic_menu_save"
                android:text="@string/save_button"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
